--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://Freddy-Elm.github.io/style.css">
   </head>
   <body>
     <div id="home">
