--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="https://freddy-elm.github.io/bakery/css/style.css">
+    <link rel="stylesheet" href="https://Freddy-Elm.github.io/style.css">
     <script src="https://kit.fontawesome.com/b16e56cde4.js" crossorigin="anonymous"></script>
   </head>
   <body>
